
name:                frontend
version:             0.1.0.0
build-type:          Simple

cabal-version:       >=1.10

executable opensearch
  main-is:             Main.hs
  default-language:    Haskell2010


  build-depends:     base
                     , aeson          >= 0.6
                     , bytestring     >= 0.10
                     , hunt-client
                     , hunt-searchengine
                     , mtl            >= 2.1
                     , scotty         >= 0.8.1  && < 0.9
                     , text           >= 1     && < 2
                     , transformers   >= 0.3
                     , warp           >= 2.1   && < 3.1
                     , data-default

